# tenancyship

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  go.mod  main.go  manage  run.sh  run_rust.sh
frontend/: index.html  tenant.html
k8s/: README.md  namespace.yaml
k8s/base/: README.md  kustomization.yaml  persistent-volumes.yaml
k8s/nginx/: README.md
k8s/nginx/base/: deployment.yaml  kustomization.yaml  nginx-deployment.yaml  nginx-service.yaml
k8s/overlays/: README.md
k8s/overlays/dev/: kustomization.yaml  nginx-replicas.yaml  redis-replicas.yaml  tenant-service-replicas.yaml
k8s/redis/: README.md
k8s/redis/base/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml
k8s/tenant-service/: README.md
k8s/tenant-service/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
nginx/: nginx.conf
nginx/lua/: ssl_automation.lua  tenant_resolver.lua
scripts/: README-all-in-one.md  README.md  all-in-one.sh  apply-env.sh  deploy-k8s.sh  deploy.sh  install_tools.sh  manage-env.sh  tenant-service.sh
tenant-service/: .env.example  Cargo.toml  Dockerfile
tenant-service/src/: main.rs
terraform/: main.tf  variables.tf
terraform/secrets/: template.tfvars
