[package]
name = "tenant-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = "2.2.1"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.5"